--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Craps Game</title>
   </head>
+  <body>
     <p>Craps Game (requires Java)</p>
+    <APPLET CODE="CrapsGame.class" WIDTH=400 HEIGHT=400></APPLET>
   </body>
 </html>
