--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <p>Craps Game (requires Java)</p>
-    <APPLET CODE="CrapsGame.class" WIDTH=400 HEIGHT=400></APPLET>
+    <APPLET CODE="CrapsGame.class" ARCHIVE="CrapsGame.jar" WIDTH=400 HEIGHT=400></APPLET>
   </body>
 </html>
